# monte-carlo-tree-search

./: .travis.yml  CMakeLists.txt  EnableCPP11.cmake  LICENSE.txt  README.md  mcts.h
examples/: CMakeLists.txt
games/: CMakeLists.txt  connect_four.cpp  connect_four.h  go.cpp  go.h  go_5row.h  kalaha.cpp  kalaha.h  nim.cpp  nim.h
tests/: CMakeLists.txt  test_go.cpp  test_mcts.cpp
